@@ -1,0 +1,151 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!--
+
+~~~~~~~~~~~~~~~~~~~~
+VNX Sample scenarios
+~~~~~~~~~~~~~~~~~~~~
+
+Name:        tutorial_ubuntu
+Description: As simple tutorial scenario made of 6 Ubuntu virtual machines (4 hosts: h1, h2, h3 and h4; 
+             and 2 routers: r1 and r2) connected through three virtual networks. The host participates 
+             in the scenario having a network interface in Net3.     
+
+This file is part of the Virtual Networks over LinuX (VNX) Project distribution. 
+(www: http://www.dit.upm.es/vnx - e-mail: vnx@dit.upm.es) 
+
+Departamento de Ingenieria de Sistemas Telematicos (DIT)
+Universidad Politecnica de Madrid
+SPAIN
+
+-->
+
+<vnx xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="/usr/share/xml/vnx/vnx-2.00.xsd">
+  <global>
+    <version>2.0</version>
+    <scenario_name>tutorial_lxc_ubuntu</scenario_name>
+    <automac/>
+    <vm_mgmt type="none" />
+    <!--vm_mgmt type="private" network="10.250.0.0" mask="24" offset="200">
+       <host_mapping />
+    </vm_mgmt-->
+    <vm_defaults>
+        <console id="0" display="no"/>
+        <console id="1" display="yes"/>
+    </vm_defaults>
+  </global>
+
+  <net name="Net0" mode="virtual_bridge" />
+  <net name="Net1" mode="virtual_bridge" />
+  <net name="Net2" mode="virtual_bridge" />
+  <net name="Net3" mode="virtual_bridge" />
+
+  <vm name="h1" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+    <mem>512M</mem>
+    <if id="1" net="Net0">
+      <ipv4>10.0.0.2/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.0.1">default</route>
+    
+    <filetree seq="vnxtxt" root="/tmp/">conf/txtfile</filetree>
+
+    <!-- Start xeyes application -->
+    <exec seq="xeyes"     type="verbatim" ostype="xexec">xeyes</exec>
+
+    <!-- Start xeyes application and wait until it is closed -->
+    <exec seq="xeyes2"    type="verbatim" ostype="xsystem">xeyes</exec>
+
+    <!-- Start gedit, maximize the window and show a text file -->
+    <exec seq="vnxtxt"    type="verbatim" ostype="system">chmod 666 /tmp/vnx.txt</exec>
+    <exec seq="vnxtxt"    type="verbatim" ostype="xexec">gedit /tmp/vnx.txt</exec>
+    <exec seq="vnxtxt"    type="verbatim" ostype="xexec">sleep 3; wmctrl -r vnx.txt -b add,maximized_vert,maximized_horz</exec>
+    <exec seq="vnxtxtoff" type="verbatim" ostype="system">pkill gedit; rm /tmp/vnx.*</exec>
+
+    <!-- Start firefox and connect to h3 web server -->
+    <exec seq="www-h3"    type="verbatim" ostype="xexec">firefox http://10.0.2.2</exec>
+    <exec seq="www-h3-off" type="verbatim" ostype="system">pkill firefox</exec>
+
+    <!-- Start calculator  -->
+    <exec seq="calc"      type="verbatim" ostype="xexec">gcalctool</exec>
+    <exec seq="calcoff"   type="verbatim" ostype="system">pkill gcalctool</exec>
+   
+  </vm>
+
+  <vm name="h2" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+    <mem>128M</mem>
+    <if id="1" net="Net0">
+      <ipv4>10.0.0.3/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.0.1">default</route>
+  </vm>
+
+  <vm name="r1" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+    <mem>128M</mem>
+    <if id="1" net="Net0">
+      <ipv4>10.0.0.1/24</ipv4>
+    </if>
+    <if id="2" net="Net1">
+      <ipv4>10.0.1.1/24</ipv4>
+    </if>
+    <if id="3" net="Net3">
+      <ipv4>10.0.3.1/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.1.2">10.0.2.0/24</route>
+    <forwarding type="ip" />
+  </vm>
+
+  <vm name="r2" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+    <mem>128M</mem>
+    <if id="1" net="Net1" name="s1/0">
+      <ipv4>10.0.1.2/24</ipv4>
+    </if>
+    <if id="2" net="Net2" name="e0/0">
+      <ipv4>10.0.2.1/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.1.1">default</route>
+    <forwarding type="ip" />
+  </vm>
+
+  <vm name="h3" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+   <mem>128M</mem>
+   <if id="1" net="Net2">
+      <ipv4>10.0.2.2/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.2.1">default</route>
+    <!-- Copy the files under conf/tutorial_ubuntu/h3 to vm /var/www directory -->
+    <filetree seq="start-www" root="/var/www">conf/tutorial_ubuntu/h3</filetree>
+    <!-- Start/stop apache www server -->
+    <exec seq="start-www" type="verbatim" ostype="system">chmod 644 /var/www/*</exec>
+    <exec seq="start-www" type="verbatim" ostype="system">service apache2 start</exec>
+    <exec seq="stop-www" type="verbatim"  ostype="system">service apache2 stop</exec>    
+  </vm>
+  
+  <vm name="h4" type="lxc" subtype="" os="">
+    <filesystem type="cow">/usr/share/vnx/filesystems/rootfs_lxc</filesystem>
+    <mem>128M</mem>
+    <if id="1" net="Net2">
+      <ipv4>10.0.2.3/24</ipv4>
+    </if>
+    <route type="ipv4" gw="10.0.2.1">default</route>    
+    <!-- Copy the files under conf/tutorial_ubuntu/h4 to vm /var/www directory -->
+    <filetree seq="start-www" root="/var/www">conf/tutorial_ubuntu/h4</filetree>
+    <!-- Start/stop apache www server -->
+    <exec seq="start-www" type="verbatim" ostype="system">chmod 644 /var/www/*</exec>
+    <exec seq="start-www" type="verbatim" ostype="system">service apache2 start</exec>
+    <exec seq="stop-www" type="verbatim"  ostype="system">service apache2 stop</exec>    
+  </vm>
+  
+  <host>
+    <hostif net="Net3">
+       <ipv4>10.0.3.2/24</ipv4>
+    </hostif>
+    <route type="ipv4" gw="10.0.3.1">10.0.0.0/16</route>
+  </host>
+
+</vnx>
